made changes to readme

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <title>Psychic Game</title>        
     </head>
-    <body>       
-            <div class="jumbotron jumbotron-fluid">
-                <div class="container">
+    <body style ="background-color:black">       
+            <div class="jumbotron jumbotron-fluid" style ="background-color:plum">
+                <div class="container" >
                         <!-- in html write Guess what letter i am thinking about? -->
                       <h1 class="display-4">The Psychic Game!</h1>             
                           <p class="lead">Guess What letter I am thinking about? 
@@ -19,16 +19,16 @@
                      </div>
                 </div>
             </div>                           
-                <div class="row">
+                <div class="row" >
                             <div class="col-sm-4">
                                 <img src="assets/images/power.jpg" class="thumbnail" alt="img-fluid" height="400" width="400">
                             </div>
                                 <div class="col-sm-4">
                                     <ul id="space" class="list-group">
-                                        <li class="list-group-item" id="wins">Wins:</li>
-                                        <li class="list-group-item" id="lose">Losses:</li>
-                                        <li class="list-group-item" id="guess-remaining">Guesses Left:</li>
-                                        <li class="list-group-item" id="guessed-letter">Your Guesses so far:</li>
+                                        <li class="list-group-item" id="wins" style ="background-color:grey; color:white">Wins:</li>
+                                        <li class="list-group-item" id="lose" style ="background-color:grey; color:white">Losses:</li>
+                                        <li class="list-group-item" id="guess-remaining" style ="background-color:grey; color:white">Guesses Left:</li>
+                                        <li class="list-group-item" id="guessed-letter" style ="background-color:grey; color:white">Your Guesses so far:</li>
                                     </ul>
                                 </div>
                                     <div class="col-sm-4">
@@ -36,7 +36,7 @@
                                     </div>
                     </div>
             
-                <div class="footer">
+                <div class="footer" style ="background-color:black; color:white">
                     &copy;Copyright Sharma
                 </div>            
                 <!-- Javascript game.js link -->
